--- a/pom.xml
+++ b/pom.xml
@@ -309,6 +309,14 @@
           <version>1.10</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+      <dependency>
+          <groupId>org.jsoup</groupId>
+          <artifactId>jsoup</artifactId>
+          <version>1.10.3</version>
+      </dependency>
+
+
       <dependency>
           <groupId>org.freemarker</groupId>
           <artifactId>freemarker</artifactId>
