--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -2,9 +2,9 @@ db.driverLocation=/Users/imooc/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
 
 #db.url=jdbc:mysql://192.1.1.1:3306/mmall?characterEncoding=utf-8
-db.url=jdbc:mysql://127.0.0.1:3306/blog_sys?characterEncoding=utf-8
+db.url=jdbc:mysql://111.230.43.57:3307/collegemanager?characterEncoding=utf-8
 db.username=root
-db.password=hgy+1996
+db.password=123456
 
 
 db.initialSize = 20
